[metadata]
name = pytorch-flame
version = attr: flame.version.__version__
author = Trong Le Huu
author_email = tronglh.241@gmail.com
description = A library based on Ignite to help you train and evaluate PyTorch neural networks more easily.
long_description = file: README.md
license = MIT License
classifiers =
    Framework :: PyTorch
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
install_requires =
    torch
    pytorch-ignite
    yacs
    tqdm
    tensorboard

[options.entry_points]
console_scripts =
    flame = flame.cli:cli

[flake8]
max-line-length = 120
per-file-ignores =
    __init__.py: F401
